# wgx

./: .ai-context.yml  .editorconfig  .gitignore  .hauski-reports  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  new_hash  old_hash  package-lock.json  package.json  push.err  reproduce_bug.yml  sichter-reports  tmp-contract-pin.txt  wgx  wgx.md
.devcontainer/: devcontainer.json  maintenance.sh  setup.sh
.local/: README.md
.wgx/: .gitignore  flows.example.json  profile.example.yml  profile.yml
ai-contexts/: README.md  _template.ai-context.yml  contracts.ai-context.yml  hauski-audio.ai-context.yml  hauski.ai-context.yml  lenskit.ai-context.yml  metarepo.ai-context.yml  mitschreiber.ai-context.yml  sichter.ai-context.yml  tools.ai-context.yml
archiv/: wgx
cli/: wgx
cmd/: audit.bash  clean.bash  config.bash  doctor.bash  env.bash  guard.bash  heal.bash  hooks.bash  init.bash  integrity.bash  lint.bash  quick.bash  release.bash  reload.bash  routine.bash  run.bash  selftest.bash  send.bash  setup.bash  start.bash  status.bash  sync-remote.bash  sync.bash  task.bash  tasks.bash  test.bash  tools.bash  validate.bash  version.bash  vibe.bash  which.bash
contracts/: insights.schema.json
docs/: ADR-0001__central-cli-contract.de.md  ADR-0001__central-cli-contract.en.md  ADR-0002__python-env-manager-uv.de.md  Command-Reference.de.md  Glossar.de.md  Glossary.en.md  Language-Policy.md  Leitlinie.Quoting.de.md  Module-Uebersicht.de.md  Runbook.de.md  Runbook.en.md  (+13 more)
(+198 files in other folders)
